--- a/pom.xml
+++ b/pom.xml
@@ -171,8 +171,8 @@
 
     <pluginRepositories>
         <pluginRepository>
-            <id>undercover-snaphost</id>
-            <url>http://undercover.googlecode.com/svn/maven/snapshot-repository</url>
+            <id>zact-snaphost</id>
+            <url>http://zact.googlecode.com/svn/maven/snapshot-repository</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -181,12 +181,12 @@
 
     <distributionManagement>
         <repository>
-            <id>kyototycoon-java</id>
-            <url>dav:https://kyototycoon-java.googlecode.com/svn/maven/repository</url>
+            <id>zact</id>
+            <url>dav:https://zact.googlecode.com/svn/maven/repository</url>
         </repository>
         <snapshotRepository>
-            <id>kyototycoon-java-snapshot</id>
-            <url>dav:https://kyototycoon-java.googlecode.com/svn/maven/snapshot-repository</url>
+            <id>zact-snapshot</id>
+            <url>dav:https://zact.googlecode.com/svn/maven/snapshot-repository</url>
         </snapshotRepository>
     </distributionManagement>
 
