--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>jetty-client</artifactId>
 			<version>7.4.3.v20110701</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.5</version>
+        </dependency>
 
         <dependency>
 			<groupId>org.slf4j</groupId>
