--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.2.4.Final</version>
+        </dependency>
 
         <dependency>
 			<groupId>org.slf4j</groupId>
@@ -170,6 +175,16 @@
 			</plugin>
 		</plugins>
 	</reporting>
+
+    <repositories>
+        <repository>
+            <id>repository.jboss.org</id>
+            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <pluginRepositories>
         <pluginRepository>
