Try Finagle. It's awesome!

--- a/pom.xml
+++ b/pom.xml
@@ -36,20 +36,27 @@
 	</licenses>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-client</artifactId>
-			<version>7.4.3.v20110701</version>
-		</dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.5</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.jboss.netty</groupId>
             <artifactId>netty</artifactId>
             <version>3.2.4.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-core</artifactId>
+            <version>1.7.0</version>
         </dependency>
 
         <dependency>
@@ -183,6 +190,11 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
+        </repository>
+        <repository>
+            <id>twittercom</id>
+            <name>twitter.com</name>
+            <url>http://maven.twttr.com/</url>
         </repository>
     </repositories>
 
