--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,13 @@
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>finagle-core</artifactId>
-            <version>1.8.0</version>
+            <version>1.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-example</artifactId>
+            <version>1.8.1</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
