--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>kyototycoon</groupId>
     <artifactId>kyototycoon</artifactId>
     <packaging>jar</packaging>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
 
     <name>Kyoto Tycoon Java Client</name>
     <description>
