--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
             <artifactId>commons-codec</artifactId>
             <version>1.5</version>
         </dependency>
+
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>finagle-core</artifactId>
@@ -53,7 +54,13 @@
             <version>1.8.4</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.1.2</version>
+            <optional>true</optional>
+        </dependency>
+        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
