--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,17 @@
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>finagle-core</artifactId>
-            <version>1.8.4</version>
+            <version>1.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-http</artifactId>
+            <version>1.9.0</version>
         </dependency>
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>finagle-example</artifactId>
-            <version>1.8.4</version>
+            <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
