--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,16 @@
         </dependency>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+            <version>4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock</artifactId>
             <version>${jmock.version}</version>
@@ -209,7 +219,7 @@
         <maven.compiler.target>1.5</maven.compiler.target>
         <maven.compiler.source>1.5</maven.compiler.source>
         <slf4j.version>1.6.1</slf4j.version>
-        <jmock.version>2.5.1</jmock.version>
+        <jmock.version>2.6.0</jmock.version>
     </properties>
 
 </project>
