--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y kyototycoon
 script:
-  - ktserver -d '+' '-'
+  - ktserver -dmn '+' '-'
   - mvn test
 
