--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo dpkg -i lua5.1_5.1.5-5_amd64.deb
   - sudo dpkg --force-depends -i libkyotocabinet16_1.2.76-4_amd64.deb
   - sudo dpkg -i libkyototycoon2_0.9.56-1_amd64.deb
-  - sudo dpkg -i kyototycoon_0.9.56-1_amd64.deb
+  - sudo dpkg --force-depends -i kyototycoon_0.9.56-1_amd64.deb
 script:
   - ktserver -dmn '+' '-'
   - mvn test
