--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
   - openjdk6
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y liblzo2-2 liblzma5
+  - sudo apt-get install -y liblzo2-2 liblzma5 liblua5.1-0
   - wget http://cdimage.debian.org/ubuntu/ubuntu/pool/universe/k/kyototycoon/kyototycoon_0.9.56-1_amd64.deb
   - wget http://cdimage.debian.org/ubuntu/ubuntu/pool/universe/k/kyototycoon/libkyototycoon2_0.9.56-1_amd64.deb
   - wget http://cdimage.debian.org/ubuntu/ubuntu/pool/universe/k/kyotocabinet/libkyotocabinet16_1.2.76-4_amd64.deb
@@ -14,7 +14,7 @@ before_install:
   - sudo dpkg -i lua5.1_5.1.5-5_amd64.deb
   - sudo dpkg --force-depends -i libkyotocabinet16_1.2.76-4_amd64.deb
   - sudo dpkg -i libkyototycoon2_0.9.56-1_amd64.deb
-  - sudo dpkg --force-depends -i kyototycoon_0.9.56-1_amd64.deb
+  - sudo dpkg -i kyototycoon_0.9.56-1_amd64.deb
 script:
   - ktserver -dmn '+' '-'
   - mvn test
