--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - sudo dpkg --force-depends -i libkyotocabinet16_1.2.76-4_amd64.deb
   - sudo dpkg -i libkyototycoon2_0.9.56-1_amd64.deb
   - sudo dpkg -i kyototycoon_0.9.56-1_amd64.deb
+install: true
 script:
   - ktserver -dmn '+' '-'
   - mvn test
