--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,17 @@ repositories {
 
 dependencies {
     compile "commons-codec:commons-codec:1.5"
-    compile "org.slf4j:slf4j-api:" + slf4jVersion
-    compile "com.twitter:finagle-http:5.3.22"
+    compile "io.netty:netty:3.9.4.Final"
+    compile "com.google.guava:guava:13.0"
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
 
     testCompile "junit:junit:4.11"
     testCompile "org.hamcrest:hamcrest-library:1.3"
     testCompile "org.jmock:jmock:$jmockVersion"
     testCompile "org.jmock:jmock-legacy:$jmockVersion"
-    testCompile "org.jmock:jmock-junit4:$jmockVersion"
+    testCompile("org.jmock:jmock-junit4:$jmockVersion") {
+        exclude group: "junit", module: "junit-dep"
+    }
     testRuntime "org.slf4j:slf4j-log4j12:$slf4jVersion"
 
     deployerJars "org.apache.maven.wagon:wagon-webdav:1.0-beta-2"
